fix: Railway DB errors + Pricing i18n
\u2705 Fixed critical Railway errors:
- admin/stats: Removed .count || 0 fallback
- admin/users: Removed achievements subquery (table doesn't exist yet)
- No more SqliteError crashes

\u2705 Pricing.jsx 100% translated:
- Title + subtitle
- Billing toggle (Monthly/Yearly/-15%)
- Current plan badge + trial days
- Back to Dashboard link
- All UI strings with t()

\ud83d\udcdd Updated JSON:
- es.json: +pricing keys
- en.json: +pricing keys

\u270f\ufe0f Next: Footer, Settings, FAQ, Onboarding, BadgeDisplay

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -198,6 +198,21 @@
       "rights": "All rights reserved"
     }
   },
+  "pricing": {
+    "billing": {
+      "monthly": "Monthly",
+      "yearly": "Yearly",
+      "discount": "-15%"
+    },
+    "currentPlan": "Current plan",
+    "trial": "Trial",
+    "backToDashboard": "← Back to Dashboard",
+    "upgrading": "Processing...",
+    "selectPlan": "Select Plan",
+    "currentPlanBadge": "Current Plan",
+    "perMonth": "/month",
+    "perYear": "/year"
+  },
   "dashboard": {
     "title": "Dashboard",
     "welcome": "Welcome back",
